# personal-website

./: README.md  package-lock.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  fly.toml  pyproject.toml
backend/chris/: __init__.py
backend/chris/app/: app.py  env_setting.py  imdb_utilities.py  logging_utilities.py
backend/chris/app/routes/: archive_routes.py  blog_routes.py  feed_routes.py  info_routes.py  media_routes.py  outdoor_routes.py  post_routes.py  professional_routes.py  project_routes.py  recipe_routes.py  surveys_routes.py
backend/chris/app/templates/: index.html
backend/chris/cli/: main.py
backend/chris/datasets/: __init__.py  dataset_format.py  dataset_formats.py  dataset_info.py  datasets.py  fetch.py
backend/chris/datasets/data/archive/: archive.json
backend/chris/datasets/data/blog/: posts.json
backend/chris/datasets/data/blog/posts/: adaptive-survey-engine.md  distrust-amazon-reviews.md  evolutionary-algorithm-sports.md  fermata-programming-language.md  graph-contraction-search.md  reactive-notebooks-to-python.md  rethinking-package-managers.md  typogenetics.md
backend/chris/datasets/data/cooking/: recipes.json
backend/chris/datasets/data/media/: artists.json  books.json  instagrams.json  memes.json  movies.json  musical-artists.json  podcasts.csv  podcasts.json  tiktoks.json  tv-shows.csv  tv-shows.json  youtube-channels.json
backend/chris/datasets/data/outdoor/: hiking-routes.json  running-routes.json
backend/chris/datasets/data/professional/: courses.json  jobs.json
backend/chris/datasets/data/projects/: projects.json
backend/chris/utilities/: generate_guid.py
backend/chris/validation/: validate.py
backend/chris/validation/constraints/: monotone_increase_constraint.py
backend/chris/validation/contraints/: __init__.py  monotone_increase_constraint.py
backend/chris/validation/schemas/: books-schema.json  courses-schema.json  memes-schema.json  podcasts-schema.json  projects-schema.json  tiktoks-schema.json
backend/chris/validation/schemas/media/: instagrams-schema.json  memes-schema.json  movies-schema.json  podcasts-schema.json  tiktoks-schema.json  tv-shows-schema.json  youtube-channels-schema.json
backend/chris/validation/schemas/outdoor/: running-routes-schema.json
backend/chris/validation/schemas/projects/: projects-schema.json
backend/chris_package/: .dockerignore  pyproject.toml
backend/chris_package/chris/app/: app.py  logging_utilities.py  settings.py
backend/chris_package/chris/datasets/: datasets.py
backend/chris_package/chris/datasets/data/media/: movies.csv  tv-shows.csv
backend/chris_package/chris/datasets/data/outdoor/: hiking-routes.json  running-routes.json
backend/chris_package/chris/datasets/data/professional/: courses.json
backend/chris_package/chris/datasets/data/projects/: projects.json
backend/chris_package/tests/app/: test_app.py  test_settings.py
backend/docker/: README.md  backend.Dockerfile
backend/pipelines/: README.md  backend-ci.yml  micro-ci.yml
backend/src/backend_package/: .dockerignore  requirements.txt  setup.py
backend/src/backend_package/cgme/cli/: main.py
backend/src/backend_package/cgme/data/: entertainment-media.csv  events.json  informational-media.csv  jobs.json  posts.json  projects.json  timeline.json
backend/src/backend_package/cgme/data/media/: movies.csv  podcasts.csv
backend/src/backend_package/cgme/data/outdoor/: cycling-routes.json  hiking-routes.json  running-routes.json
backend/src/backend_package/cgme/validation/: color_printing.py  item.py  validate_posts.py  validation_results.py  validator.py
backend/src/backend_package/cgme/validation/blog/: validate_posts.py
backend/src/backend_package/cgme/validation/posts/: post_properties.py  post_validator.py
backend/src/backend_package/cgme/validation/projects/: project_properties.py  project_validator.py
backend/src/backend_package/cgme/web/: app.py  app_utilities.py  codes.py  http_codes.py  logging_utilities.py  settings.py
backend/src/chris/: __init__.py
backend/src/chris/app/: app.py  env_setting.py  imdb_utilities.py
backend/src/chris/app/routes/: archive_routes.py  art_routes.py  blog_routes.py  chord_routes.py  info_routes.py  media_routes.py  outdoor_routes.py  recipe_routes.py  snippet_routes.py  surveys_routes.py
backend/src/chris/app/templates/: index.html
backend/src/chris/cli/: cli.py
backend/src/chris/datasets/: dataset_info.py  datasets.py  fetch.py
backend/src/chris/utilities/: generate_uuid.py
backend/src/chris/validation/: validate.py
backend/src/chris/validation/constraints/: __init__.py  monotone_increase_constraint.py
backend/src/chris_package/: README.md  release-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt
backend/src/chris_package/chris/_utilities/: generate_guid.py
backend/src/chris_package/chris/_validation/: constraints.py  validate.py
backend/src/chris_package/chris/app/: app.py  database_utilities.py  logging_utilities.py  settings.py
backend/src/chris_package/chris/cli/: main.py
backend/src/chris_package/chris/validation/: README.md  validation_results.py
backend/src/chris_package/tests/: utilities.py
backend/src/chris_package/tests/app/: test_app.py  test_settings.py
backend/src/chris_package/tests/validation/: test_validation.py
backend/src/micro/: Package.resolved
backend/src/swift/micro/: Package.swift
backend/tests/: test_version.py  utilities.py
backend/tests/app/: test_app.py  test_settings.py
backend/tests/datasets/: test_dataset_formats.py  test_dataset_info.py  test_fetch.py
backend/tests/validation/: test_validation.py
backend/validation/: post.py  validate_posts.py
frontend/app/: .env  (+3 more)
(+468 files in other folders)
