[project]
authors = [
  { name = "Chris Gregory", email = "christopher.b.gregory@gmail.com" },
]
dependencies = [
  "click>=8.2.1",
  "fastapi[standard]>=0.116.1",
  "httpx>=0.28.1",
  "jsonvl>=0.5.0",
  "pandas>=2.3.2",
  "pydantic>=2.11.9",
  "python-frontmatter>=1.1.0",
]
description = "Personal website backend"
keywords = ["personal", "website", "python", "tools"]
license = { file = "LICENSE.txt" }
name = "chris"
readme = "README.md"
requires-python = ">=3.13"
version = "1.1.0"

[tool.uv]
dev-dependencies = [
  "covcheck[toml]>=0.4.3",
  "mypy>=1.17.1",
  "pytest-cov>=6.2.1",
  "pytest>=8.4.1",
  "ruff>=0.12.8",
  "semver>=3.0.4",
]
package = true

[project.urls]
Repository = "https://github.com/gregorybchris/personal-website"

[project.scripts]
cgme = "chris.cli.cli:main"

[tool.covcheck]
branch = 0.0
line = 0.0

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
ignore = ["D100", "D104", "FIX002", "TD003"]
select = [
  "A",
  "ARG",
  "B",
  "BLE",
  "C4",
  "E",
  "EM",
  "ERA",
  "F",
  "FIX",
  "G",
  "I",
  "ICN",
  "ISC",
  "LOG",
  "N",
  "PL",
  "PT",
  "PTH",
  "PLR",
  "RET",
  "RUF",
  "SIM",
  "SLF",
  "T20",
  "TCH",
  "TD",
  "TID",
  "W",
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["chris"]

[tool.ruff.lint.extend-per-file-ignores]
"**/*.py" = ["G004", "EM101", "EM102", "TD002"]
"**/tests/**/*.py" = ["SLF", "PLR2004", "PT013"]
"src/chris/utilities/generate_uuid.py" = ["T201"]
"src/chris/validation/validate.py" = ["T201"]
